@@ -1,3 +1,13 @@
+2021-07-01  Alex Christensen  <achristensen@webkit.org>
+
+        loadSimulatedRequest: should do same delegate callbacks as loadHTMLString and loadData
+        https://bugs.webkit.org/show_bug.cgi?id=227599
+
+        Reviewed by Chris Dumez.
+
+        * WebProcess/WebPage/WebPage.cpp:
+        (WebKit::WebPage::loadSimulatedRequestAndResponse):
+
 2021-07-01  Youenn Fablet  <youenn@apple.com>
 
         Disable relay for UDP sockets when not needed
